RESOLVED FIXED166668
Re-implement ExceptionOr on top of WTF::Expected
https://bugs.webkit.org/show_bug.cgi?id=166668
Summary Re-implement ExceptionOr on top of WTF::Expected
Sam Weinig
Reported 2017-01-03 15:36:32 PST
Re-implement ExceptionOr on top of WTF::Expected
Attachments
Patch (6.13 KB, patch)
2017-01-03 15:38 PST, Sam Weinig
no flags
Sam Weinig
Comment 1 2017-01-03 15:38:44 PST
WebKit Commit Bot
Comment 2 2017-01-03 16:34:35 PST
Comment on attachment 297965 [details] Patch Clearing flags on attachment: 297965 Committed r210257: <http://trac.webkit.org/changeset/210257>
WebKit Commit Bot
Comment 3 2017-01-03 16:34:41 PST
All reviewed patches have been landed. Closing bug.
Yusuke Suzuki
Comment 4 2017-01-03 23:55:11 PST
Great!
JF Bastien
Comment 5 2017-01-04 09:57:49 PST
Comment on attachment 297965 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=297965&action=review I only just saw this. I really like this incremental approach, and I'm surprised it was so little code! > Source/WebCore/dom/ExceptionOr.h:76 > + : m_value(makeUnexpected(WTFMove(exception))) I think this should be std::forward, since the function is just passing `exception` as-is from the parameter to `makeUnexpected`. > Source/WebCore/dom/ExceptionOr.h:131 > + : m_value(makeUnexpected(WTFMove(exception))) Ditto.
Note You need to log in before you can comment on or make changes to this bug.