Source/WebCore/crypto/algorithms/CryptoAlgorithmAES_KW.cpp
@@ -33,6 +33,7 @@
 #include "CryptoKeyAES.h"
 #include "CryptoKeyDataOctetSequence.h"
 #include "ExceptionCode.h"
+#include <wtf/Variant.h>
 
 namespace WebCore {
 
