Source/WebCore/crypto/algorithms/CryptoAlgorithmRSA_OAEP.cpp
@@ -37,6 +37,7 @@
 #include "CryptoKeyPair.h"
 #include "CryptoKeyRSA.h"
 #include "ExceptionCode.h"
+#include <wtf/Variant.h>
 
 namespace WebCore {
 
